--- a/app/static/index.html
+++ b/app/static/index.html
@@ -18,7 +18,7 @@
     </nav>
 </header>
 
-<div ui-view class="container"></div>
+<div ui-view class="container-fluid"></div>
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
