Got some web-socket action going on as well as some basic streaming action.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,6 +5,7 @@
     <title>Couch</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <script src="https://www.rdio.com/api/api.js?client_id=zknbfqygnnc6pbt7mn5tsd2vaq"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
     <base href="/">
 </head>
 <body>
