--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,7 +5,6 @@
     <title>Couch</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="https://www.rdio.com/api/api.js?client_id=zknbfqygnnc6pbt7mn5tsd2vaq"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
     <base href="/">
 </head>
 <body>
@@ -21,10 +20,25 @@
 
 <div ui-view class="container-fluid"></div>
 
+<!-- JQuery -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
+
+<!-- Bootstrap -->
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+<!-- AngularJS -->
 <script src="bower_components/angular/angular.js"></script>
+
+<!-- Angular UI-Router -->
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
+<!-- Firebase -->
+<script src="bower_components/firebase/firebase.js"></script>
+
+<!-- AngularFire -->
+<script src="bower_components/angularfire/dist/angularfire.js"></script>
+
+<!-- Couch -->
 <script src="app.js"></script>
 </body>
 </html>
