--- a/app/static/index.html
+++ b/app/static/index.html
@@ -27,7 +27,7 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/firebase/firebase-debug.js"></script>
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
-<script src="lib/tattletale.js"></script>
+<script src="js/tattletale.js"></script>
 {#<script src="bower_components/stacktrace-js/dist/stacktrace.js"></script>#}
 {#<script src="bower_components/app-logger-angular/js/logging.js"></script>#}
 <script src="app.js"></script>
