--- a/app/static/index.html
+++ b/app/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Couch</title>
-    <link rel="shortcut icon" href="http://faviconist.com/icons/d87f4c37acaf6ec5a03654a230d255e0/favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="https://www.rdio.com/api/api.js?client_id=zknbfqygnnc6pbt7mn5tsd2vaq"></script>
     <base href="/">
