Added log button to group_view

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,6 +5,7 @@
     <title>Couch</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="group_view/group_view.css">
     <script src="https://www.rdio.com/api/api.js?client_id=zknbfqygnnc6pbt7mn5tsd2vaq"></script>
     <base href="/">
 </head>
