--- a/app/static/group_view/group_view.html
+++ b/app/static/group_view/group_view.html
@@ -91,7 +91,7 @@
                 </ul>
             </div>
         </div>
-        <div class="media-right" id="log_button">
+        <div class="pull-right" id="log_button">
             <button class="btn btn-success" type="button" ng-click="sendLogs()">
                 Send Logs
             </button>
