--- a/app/static/index.html
+++ b/app/static/index.html
@@ -28,7 +28,7 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/firebase/firebase-debug.js"></script>
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
-<script src="js/tattletale.js"></script>
+<script src="common/js/tattletale.js"></script>
 <script src="app.js"></script>
 <script src="home_view/home_view.js"></script>
 <script src="group_view/group_view.js"></script>
