Added Clientside documentation

--- a/app/static/group_view/group_view.html
+++ b/app/static/group_view/group_view.html
@@ -92,8 +92,8 @@
             </div>
         </div>
         <div class="media-right" id="log_button">
-            <button class="btn btn-success" type="button" ng-click="sendLogs()">
-                Send Logs
+            <button ui-sref="home" class="btn btn-success" type="button">
+                Back To Home
             </button>
         </div>
     </div>
